# jieba-pyfast

./: README.md  build.py  pyproject.toml  setup.py  test.py
.github/workflows/: main.yml
jieba_pyfast/: __init__.py  _compat.py  tokenizer.py
jieba_pyfast/_core/: fast.c
jieba_pyfast/finalseg/: __init__.py  jieba_fast_functions_py3.py
jieba_pyfast/posseg/: __init__.py  viterbi.py
jieba_pyfast/probs/: __init__.py  emit.py  start.py  trans.py
jieba_pyfast/source/: _fast.c  jieba_fast_functions_wrap_py3.c
tests/: test.txt  test_bug.py  test_change_dictpath.py  test_cut_for_search.py  test_cut_for_search_parallel.py  test_cutall.py  test_disable_hmm_parallel.py  test_jieba.py  test_jiebacmd.py  test_lock.py  test_multithread.py  test_no_hmm.py  test_parallel.py  test_pos.py  test_pos_no_hmm.py  test_pos_parallel.py  test_tokenize.py  test_tokenize_no_hmm.py  test_userdict.py
