[tool.poetry]
name = "jieba_pyfast"
version = "4.0.0"
description = "Tokenize Chinese characters"
license = "MIT"
authors = ["snapADDY GmbH <info@snapaddy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
auditwheel = "^5.1.2"
pytest = "^7.1.2"
cibuildwheel = "^2.9.0"

[tool.poetry.build]
generate-setup-file = true
script = "build.py"

[tool.isort]
line_length = 88
use_parentheses = true
include_trailing_comma = true
multi_line_output = 3

[tool.pycln]
all = true
exclude = "__init__.py"

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-*"
before-build = "rm -rf build"
test-requires = "pytest"
test-command = "pytest {project}/tests"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
