[tool.poetry]
name = "jieba_pyfast"
version = "3.13.1"
description = "Tokenize Chinese characters"
license = "MIT"
authors = ["snapADDY GmbH <info@snapaddy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.*"

[tool.poetry.group.dev.dependencies]
isort = "^5.9.2"
black = "^23.3.0"
auditwheel = "^5.1.2"
pycln = "^2.1.1"
pytest = "^7.1.2"
cibuildwheel = "^2.9.0"

[tool.poetry.build]
generate-setup-file = true
script = "build.py"

[tool.cibuildwheel]
build = "cp313-*"
test-requires = "pytest"
test-command = "pytest {project}/tests"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
