[project]
name = "jieba_pyfast"
version = "4.0.0"
description = "Tokenize Chinese characters"
license = "MIT"
authors = [{ name = "snapADDY GmbH", email = "info@snapaddy.com" }]
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]
dev = ["pytest>=8", "cibuildwheel>=2.22"]

[tool.cibuildwheel]
build = "cp311-* cp312-* cp313-* cp314-*"
before-build = "rm -rf build"
test-requires = "pytest"
test-command = "pytest {project}/tests"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
